examples/bad/03_1_bad_assignement.soy
a = int; # declare a as int

a = True; # ERROR: incompatible types in assignment


